# FormSample

backend/: README.md
backend/src/: main.py  pyproject.toml
backend/src/utils/: common.py
doc/api/: api.md  home-info.md  list-info.md  register.md  user-info.md
doc/api/DELETE/: Delete.md
doc/api/GET/: Department.md  Home.md  List.md  Status.md  Terminal.md  Users.md
doc/api/POST/: Register.md  TempSaved.md  Update.md  Withdraw.md
doc/database/: master.md
doc/database/master/: branch.md  brand.md  brand_category.md  department.md  industry.md  industry_category.md  prefecture.md  rate.md
doc/database/system/: register.md  status.md  users.md
doc/ui/: _.drawio
doc/ui/input/: _.md  form.md  home.md  list.md
doc/ui/screen/: Home.drawio
doc/ui/screen/Form/: Form.drawio
doc/ui/screen/List/: Dialog.drawio  List.drawio
frontend/: README.md  package.json
